// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expense Form component renders add if no expense prop 1`] = `
<ExpenseForm
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="name"
      onChange={[Function]}
      value=""
    >
      <p>
        <label>
          name
          :
          <input
            name="name"
            onChange={[Function]}
            required={true}
            value=""
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="price"
      onChange={[Function]}
      type="number"
      value=""
    >
      <p>
        <label>
          price
          :
          <input
            name="price"
            onChange={[Function]}
            required={true}
            type="number"
            value=""
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Add
      </button>
    </p>
  </form>
</ExpenseForm>
`;

exports[`Expense Form component renders edit if there is expense prop 1`] = `
<ExpenseForm
  expense={
    Object {
      "categoryId": "abc",
      "name": "bus",
      "price": 5,
    }
  }
  onCancel={[MockFunction]}
  onComplete={[MockFunction]}
>
  <form
    onSubmit={[Function]}
  >
    <InputControl
      name="name"
      onChange={[Function]}
      value="bus"
    >
      <p>
        <label>
          name
          :
          <input
            name="name"
            onChange={[Function]}
            required={true}
            value="bus"
          />
        </label>
      </p>
    </InputControl>
    <InputControl
      name="price"
      onChange={[Function]}
      type="number"
      value={5}
    >
      <p>
        <label>
          price
          :
          <input
            name="price"
            onChange={[Function]}
            required={true}
            type="number"
            value={5}
          />
        </label>
      </p>
    </InputControl>
    <p>
      <button
        type="submit"
      >
        Update
      </button>
      <button
        onClick={[MockFunction]}
        type="button"
      >
        Cancel
      </button>
    </p>
  </form>
</ExpenseForm>
`;
